@@ -150,8 +150,6 @@ class Sys::IO {
   
   native static method access : int ($pathname : string, $mode : int);
   
-  native static method faccessat_raw : int ($dirfd : int, $pathname : string, $mode : int, $flags : int);
-  
   native static method faccessat : int ($dirfd : int, $pathname : string, $mode : int, $flags : int);
   
   static method eaccess : int ($pathname : string, $mode : int) {
